// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBar renders correctly 1`] = `
<vsnackbar-stub width="960px" tag="div" value="true" top="true" contentclass="" timeout="-1" transition="v-snack-transition" role="status" class="vd-notification-bar">
  <div class="d-flex align-center text-wrap grey-darken-80--text">
    <vicon-stub color="grey-darken-80" class="vd-notification-icon mr-2">
      M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z
    </vicon-stub>

    test
  </div>
</vsnackbar-stub>
`;

exports[`NotificationBar renders correctly with a custom icon 1`] = `
<vsnackbar-stub width="960px" tag="div" value="true" top="true" contentclass="" timeout="-1" transition="v-snack-transition" role="status" class="vd-notification-bar">
  <div class="d-flex align-center text-wrap grey-darken-80--text">
    <vicon-stub color="grey-darken-80" class="vd-notification-icon mr-2">
      test-icon
    </vicon-stub>

    test
  </div>
</vsnackbar-stub>
`;
